# ConfidoAI

./: .gitignore  README.md  pyproject.toml  requirements.txt
postgresql/: app.py  split_typing_audio.py  start.py
postgresql/scripts/: create_appt_slots_table.sql  create_insurance_details_table.sql  populate_tables.sql  query.sql
postgresql/server/: pool.py
postgresql/server/queries/: appointments.py  insurances.py
voice_agent/: gpt_agent.py  main.py
voice_agent/assistants/: front_desk_assistant.py
voice_agent/models/: tts.py
